alignment and js fixes

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -189,7 +189,7 @@ body {
         font-weight: 800;
         margin-bottom: 9px;
         display: inline-block;
-        margin-top: -11px;
+        margin-top: -9px;
         &:before {
             content: '';
             display: inline-block;
@@ -200,7 +200,7 @@ body {
             margin-right: 10px;
             background-size: 56px 56px;
             background-repeat: no-repeat;
-            margin-top: -6px;
+            margin-top: -9px;
         }
     }
      &.con {
